# Cakes-and-Bakes

./: README.md
backend/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go  server.go  server_test.go
backend/src/: image.rs  main.rs  orders.rs  utils.rs
backend_rust/: Cargo.toml
backend_rust/src/: image.rs  main.rs  utils.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: app.css  app.pcss
frontend/src/lib/: cart.svelte.ts  cart.ts  lib.ts
frontend/src/lib/components/: button.svelte  cart.svelte  checkbox.svelte  divider.svelte  dropdown.svelte  input.svelte  numberpicker.svelte  select.svelte  tabgroup.svelte  tabs.svelte  text-group.svelte  text.svelte  textarea.svelte
frontend/src/lib/components/Select-Chip/: index.ts  select-chip.svelte  select-group.svelte
frontend/src/lib/components/input/: index.ts  input.svelte  label.svelte  text-field.svelte
frontend/src/lib/components/select_chip/: select-chip.svelte  select-group.svelte
frontend/src/lib/styles/: button.pcss  dropdown.pcss  input.pcss  text.pcss
frontend/src/routes/: +layout.svelte  +page.svelte  navbar.svelte
frontend/src/routes/checkout/: +page.svelte  checkout.svelte  order_summary.svelte
frontend/src/routes/checkout/success/: +page.svelte
frontend/src/routes/order/: +page.svelte  order_alert.svelte  order_form.svelte
frontend/src/routes/test/: +page.svelte
