[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
dotenv = "0.15.0"
http = "1.1.0"
rand = "0.8.5"
reqwest = {version = "0.12.7", features = ["json"]}
serde = {version = "1.0.210",features = ["derive"]}
serde_json = "1.0.128"
tokio = {version = "1.40.0",features = ["full"]}
tower = "0.5.1"
tower-http = {version = "*", features = ["cors"]}
ulid = "1.1.3"
